--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,15 +20,17 @@ dependencies:
   barcode_widget: ^2.0.1
   font_awesome_flutter: ^9.1.0
   keyboard_visibility: ^0.5.6
-
+  cupertino_icons: ^1.0.2
+  file_picker: ^3.0.4
   #Firebase
   firebase_core: ^1.3.0
   firebase_auth: ^2.0.0
   cloud_firestore: ^2.3.0
   firebase_storage: ^9.0.0
   firebase_analytics: ^8.1.2
+  intl: ^0.17.0
 
-  cupertino_icons: ^1.0.2
+
 
 dev_dependencies:
   flutter_test:
